Adicionado contenido al index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Aprendiendo GIT</title>
 </head>
 <body>
-    <p>Estamos aprendiendo GIT</p>
+    <h1>Estamos aprendiendo GIT</h1>
+    <p>Comandos Basicos de GIT</p>
+
 </body>
 </html>
